# labPowerSupplyGUI

./: .clang-format  AppMenuBar.qml  AppTabBar.qml  AppToolBar.qml  CMakeLists.txt  Main.qml  README.md  REDME.md  batterycharger.cpp  batterycharger.h  bccontroller.cpp  bccontroller.h  corefuntionalitytests.cpp  main.cpp  psu.cpp  psu.h  psucontroller.cpp  psucontroller.h  unitdefinitions.h  utils.cpp  utils.h
